# PromptForge

./: .gitignore  README.md  pyproject.toml  torun.txt
examples/news_classification/: task.py  test.jsonl  train.jsonl
promptforge/: __init__.py  cache.py  cli.py  example.py  metrics.py  module.py  signature.py  tracker.py
promptforge/backends/: __init__.py  base.py  ollama_backend.py  openai_backend.py
promptforge/optimizers/: __init__.py  bootstrap.py  combined.py  instruction.py
tests/: conftest.py  test_bootstrap.py  test_cache.py  test_metrics.py  test_signature.py
