[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptforge"
version = "0.1.0"
description = "DSPy-inspired automatic prompt optimization framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "diskcache>=5.6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
promptforge = "promptforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["promptforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
